# apprentice

./: Cargo.toml  README.md  sample_config.toml
apprentice/: Cargo.toml
apprentice/src/: agent.rs  config.rs  error.rs  main.rs  options.rs  prompts.rs  style.rs  term.rs  toml_parser.rs  util.rs
apprentice/src/rag/: hugface.rs  mod.rs
apprentice/src/tools/: help.rs  mod.rs  shell.rs
apprentice_lib/: Cargo.toml  README.md
apprentice_lib/src/: config.rs  error.rs  lib.rs  util.rs
apprentice_lib/src/llm/: anthropic.rs  gcp.rs  llmchat.rs  messages.rs  mod.rs  openai.rs  util.rs
apprentice_lib/src/rag/: hugface.rs  mod.rs
apprentice_lib/src/request/: client.rs  mod.rs  reqwest.rs  stub.rs
apprentice_lib/src/tools/: mod.rs  tool.rs
