[package]
name = "apprentice"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env"] }
anstyle = "1.0.10"
dirs = "5.0.1"
thiserror = "1.0.69"
toml = "0.8.19"
futures-io = { version = "0.2.0-beta" }
rustyline = { version = "15.0.0", default-features = false, features = ["derive"] }
apprentice_lib = { workspace = true }
candle-core = { version = "0.8.1", default_features = false }
hf-hub = { version = "0.3.2", default_features = false, features = ["online"] }
tokenizers = { version = "0.21.0" }
candle-transformers = { version = "0.8.1", default_features = false }
candle-nn = { version = "0.8.1", default_features = false }
serde_json = "1.0.133"

[[bin]]
name = "apprentice"
