[package]
name = "apprentice_lib"
description = "A library that allows to create LLM agent applications"
license = "Apache-2.0"
version = "0.1.1"
edition = "2021"

[dependencies]
reqwest = { version="0.12.9", features = ["json", "blocking"] }
thiserror = "1.0.69"
serde = {version = "1.0.215", features=["derive"]}
serde_json = "1.0.133"
candle-core = { version = "0.8.1", default-features = false }
hf-hub = { version = "0.3.2", default-features = false, features = ["online"] }
tokenizers = { version = "0.21.0" }
candle-transformers = { version = "0.8.1", default-features = false }
candle-nn = { version = "0.8.1", default-features = false }

[lib]
name = "apprentice_lib"
